; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/spawn/extr_posix_spawn.c_posix_spawn_destroypersona_info_np.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/spawn/extr_posix_spawn.c_posix_spawn_destroypersona_info_np.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct._posix_spawn_persona_info* }
%struct._posix_spawn_persona_info = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @posix_spawn_destroypersona_info_np to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @posix_spawn_destroypersona_info_np(i32** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32**, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  %5 = alloca %struct._posix_spawn_persona_info*, align 8
  store i32** %0, i32*** %3, align 8
  %6 = load i32**, i32*** %3, align 8
  %7 = icmp eq i32** %6, null
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i32**, i32*** %3, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %8, %1
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %2, align 4
  br label %30

14:                                               ; preds = %8
  %15 = load i32**, i32*** %3, align 8
  %16 = bitcast i32** %15 to %struct.TYPE_2__**
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  store %struct.TYPE_2__* %17, %struct.TYPE_2__** %4, align 8
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load %struct._posix_spawn_persona_info*, %struct._posix_spawn_persona_info** %19, align 8
  store %struct._posix_spawn_persona_info* %20, %struct._posix_spawn_persona_info** %5, align 8
  %21 = load %struct._posix_spawn_persona_info*, %struct._posix_spawn_persona_info** %5, align 8
  %22 = icmp eq %struct._posix_spawn_persona_info* %21, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %14
  %24 = load i32, i32* @EINVAL, align 4
  store i32 %24, i32* %2, align 4
  br label %30

25:                                               ; preds = %14
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store %struct._posix_spawn_persona_info* null, %struct._posix_spawn_persona_info** %27, align 8
  %28 = load %struct._posix_spawn_persona_info*, %struct._posix_spawn_persona_info** %5, align 8
  %29 = call i32 @free(%struct._posix_spawn_persona_info* %28)
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %25, %23, %12
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @free(%struct._posix_spawn_persona_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
